test/good/classes/struct07.px

func g1(Char c, Int x) Float def
    return c.code - x

func g2(Char c, Int x) Float def
    return c.code + x

class A def
    Char->Int->Float f: g1

a = A()
print a.f('A', 1)
a.f = g2
print a.f('B', 6)
