test/bad/classes/inheritance06.px

class A def
    Int x

class A'(A) def
    Int x


class B def
    A' a

class B'(B) def
    A a
